--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .shir{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 *{
     padding: 0%;
@@ -19,9 +19,18 @@ hr{
 }
 button{
     border-radius: 50px;
-    width: 100px;
+    width: 200px;
     height: 50px;
 }
 .opis{
     padding-top: 25px;
+}
+.block{
+	width: auto;
+	height: auto;
+	float: left;
+	border: 2px solid aqua;
+    border-radius: 30px;
+	box-sizing: border-box;
+
 }
